# wireless-measurements

./: .gitignore  LICENSE  README.md  collect_metrics.py  coords.py  docker-compose.yml  evaluate_metrics.py  module_logging.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.env
src/wifi_info/: __init__.py  requirements.py  settings.py  utils.py  wireless.py
src/wifi_info/storage/: influxdb.py
tests/test_wifi_info/: test_requirements.py  test_wireless_iperf3.py  test_wireless_metrics.py  test_wireless_utility.py
tools/: coords.json.template  coords.py  data_migrator.py  eval.json.template  evaluate_metrics.py  pydantic_json_source.py
