[metadata]
name = wifi_info_ENeS_Lab
description = A small package to gather information about a wireless connection.
author = Julian Euler
license = GNU v3.0
license_files = LICENSE
platforms = linux, unix
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    wifi_info
install_requires =
    influxdb_client
    iperf3
    netifaces-plus
    pydantic
    pydantic-settings
python_requires = >=3.10
package_dir = 
    =src
zip_safe = false

[options.package_data]
wifi_info = py.typed